<resources>
    <string name="app_name">GourMatch</string>
    <string name="Login">Sign In</string>
    <string name="authPassReset">Reset Password</string>
    <string name="authCreateAcc">Create Account</string>
    <string name="authOr">OR</string>
    <string name="facebook_app_id">263380970701549</string>
    <string name="title_activity_profile_builder">ProfileBuilderActivity</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="createAcctTitle">Create Account</string>
    <string name="SignUp">Sign Up!</string>
    <string name="reset_pass_title">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="rest_pass_subtitle">Email address:</string>
    <string name="nextButton">Next</string>
    <string name="finishButton">Finish</string>
    <string name="backButton">Back</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="username">Username</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string-array name="gender_arrays">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="FeedMe">FeedMe</string>
    <string name="WhatsGood">What\'s Good?</string>
    <string name="FoodEvents">Food Events</string>
    <string name="RestaurantWeek">Restaurant of the Week</string>

    <string name="createListingTitle">Create Listing</string>
    <string name="title">Title</string>
    <string name="location_title">Location Title</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="description">Description</string>

    <string name="action_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="sign_out">Sign Out</string>
    <string name="birthdayPrompt">Birthday</string>
    <string name="genderPrompt">Gender</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_feature_viewer">FeatureViewer</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="one">one</string>
    <string name="total_seats">Total Seats</string>
    <string-array name="short_listing">
        <item>Title</item>
        <item>Date</item>
        <item>Time</item>
        <item>Location</item>
        <item>Address</item>
    </string-array>
    <string-array name="Title">
        <item>title</item>
    </string-array>
    <string-array name="Date">
        <item>datemonth</item>
        <item>dateday</item>
        <item>dateyear</item>
    </string-array>
    <string-array name="Time">
        <item>timehour</item>
        <item>timemin</item>
    </string-array>
    <string-array name="Location">
        <item>locationname</item>
    </string-array>
    <string-array name="Address">
        <item>addressline</item>
        <item>city</item>
        <item>state</item>
    </string-array>
    <!--  bold, italicized, size level (small, med, large) -->
    <string-array name="Title_settings">
        <item>true</item>
        <item>false</item>
        <item>large</item>
    </string-array>
    <string-array name="Date_settings">
        <item>false</item>
        <item>false</item>
        <item>medium</item>
    </string-array>
    <string-array name="Time_settings">
        <item>false</item>
        <item>true</item>
        <item>small</item>
    </string-array>
    <string-array name="Location_settings">
        <item>false</item>
        <item>false</item>
        <item>medium</item>
    </string-array>
    <string-array name="Address_settings">
        <item>false</item>
        <item>false</item>
        <item>small</item>
    </string-array>

    <string-array name="FeedMe_Tab_Titles">
        <item>Listings</item>
        <item>Requests</item>
    </string-array>

    <string-array name="FeedMe_Tab_Java">
        <item>Listings</item>
        <item>RequestsFragment</item>
    </string-array>

    <string name="FeedMe_Image">feedme_title</string>
    <string name="Name">Name</string>
    <string name="yourEmail">Your Email</string>
    <string name="ComposeEmail">Compose Email</string>
    <string name="Message">Message</string>
    <string name="date">Date</string>
    <string name="time">Time</string>

</resources>
