<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="umut.gourmatch.ProfileBuilderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@color/titleBackground"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/titleTextHeight"
            android:src="@drawable/basic_info_title"
            android:tint="@color/title"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/title">
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:weightSum="4.75"
        android:background="@color/titleBackground"
        >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/basic_firstname"
                android:hint="@string/firstName"
                android:layout_weight=".25"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/basic_lastname"
                android:hint="@string/lastName"
                android:layout_weight=".25"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/basic_username"
                android:hint="@string/username"
                android:layout_weight=".25"
                />

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/birthdayPick"
                android:prompt="@string/birthday"
                android:spinnersShown="true"
                android:calendarViewShown="false"
                android:layout_weight="2"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Gender"
                android:prompt="@string/gender"
                android:entries="@array/gender_arrays"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:weightSum="3">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />
                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/Next"
                    android:text="@string/nextButton"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
